--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,14 @@
 {
+
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "echo",
       "type": "shell",
-      "label": "g++ build active file",
-      "command": "/usr/bin/g++",
-      "args": ["-g", "${file}", "-o", "${fileDirname}/${fileBasenameNoExtension}"],
-      "options": {
-        "cwd": "/usr/bin"
-      },
-      "problemMatcher": ["$gcc"],
+      "command": "g++",
+      "args": [
+        "-g", "${file}"
+      ],
       "group": {
         "kind": "build",
         "isDefault": true
